<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/browse_add" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_sell_your_stuff"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/sell_your_staff" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/help"
                android:title="@string/help" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
