<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemHome"
            android:icon="@mipmap/ic_home"
            android:title="@string/action_home"/>
        <item
            android:id="@+id/navItemProfile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/action_profile"/>

        <item
            android:id="@+id/navItemInBox"
            android:icon="@mipmap/ic_mail"
            android:title="@string/action_inbox"/>

        <item
            android:id="@+id/navItemSetting"
            android:icon="@mipmap/ic_settings"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/navItemLogout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/action_logout"/>
    </group>
</menu>