<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/postImageList"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:background="@mipmap/add_btn" />

        <TextView
            android:id="@+id/postTitleList"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/add_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/postDescriptionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:text="@string/add_post_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postTimestampList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/post_add_date_created"
            android:textStyle="italic" />

    </LinearLayout>

</android.support.v7.widget.CardView>